# effective-palm-tree

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
docs/: dlss-snake-implementation.md  dlss-snake-native-build.md  environment-and-ue.md  streamline-dlss-download.md  ue-package-sources.md  unity-attempt.md
native/: CMakeLists.txt
native/include/snake/: core.hpp  streamline_bridge.hpp
native/src/: core.cpp  main.cpp  streamline_bridge.cpp
native/tests/: core_tests.cpp  streamline_bridge_tests.cpp
scripts/: build-native-snake.sh  check-ue-sources.sh  fetch-streamline-sdk.sh  test-unity-headless.sh
src/: game.test.ts  game.ts  main.ts  styles.css
